<resources>
    <string name="app_name">Cobros</string>
    <string name="cero">0</string>
    <string name="uno">1</string>
    <string name="dos">2</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="coma">.</string>
    <string name="restar">60 dias</string>
    <string name="multiplicar">30 dias</string>
    <string name="dividir">20 dias</string>
    <string name="borrar">←</string>
    <string name="vaciar">c</string>
    <string name="suma">90 dias</string>
    <string name="resultado">=</string>
    <string name="pantalla"></string>
</resources>
